this css looks like it covers mobil/desktop light/dark correctly now

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,30 +6,37 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-navbar-background-color: #0b333f; /* ampache */
-  --ifm-footer-background-color: #0b333f; /* ampache */
-  --ifm-navbar-link-color: #f8ac4c; /* ampache */
-  --ifm-menu-color-background-active: #f8ac4c; /* ampache */
-  --ifm-breadcrumb-item-background-active: #f8ac4c; /* ampache */
-  --ifm-breadcrumb-color-active: #000; /* ampache */
-  --ifm-menu-color-active: #000; /* ampache */
-  --ifm-link-color: #ff8300; /* ampache */
-  --ifm-link-hover-color: #f8ac4c; /* ampache */
-  --ifm-color-primary: #ff8300; /* ampache */
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-breadcrumb-background-active: #f8ac4c;
+  --ifm-breadcrumb-item-background-active: #f8ac4c;
+  --ifm-breadcrumb-color-active: #000;
+  --ifm-code-font-size: 95%;
+  --ifm-color-primary: #ff8300;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-footer-background-color: #0b333f;
+  --ifm-link-color: #ff8300;
+  --ifm-link-hover-color: #f8ac4c;
+  --ifm-menu-color: #ff8300;
+  --ifm-menu-color-active: #000;
+  --ifm-menu-color-background-active: #f8ac4c;
+  --ifm-menu-color-background-hover: #1b1b1d;
+  --ifm-menu-link-color: #fff;
+  --ifm-navbar-background-color: #0b333f;
+  --ifm-navbar-link-color: #f8ac4c;
+  --ifm-toc-link-color: #000;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-menu-color: #e3e3e3; /* ampache */
-  --ifm-menu-color-active: #fff; /* ampache */
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-breadcrumb-background-active: #f8ac4c;
+  --ifm-breadcrumb-item-background-active: #f8ac4c;
+  --ifm-breadcrumb-color-active: #000;
   --ifm-color-primary: #ff8300;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
@@ -37,16 +44,21 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-link-color: #f8ac4c;
+  --ifm-link-hover-color: #f8ac4c;
+  --ifm-menu-color: #fff;
+  --ifm-menu-color-active: #000;
+  --ifm-menu-color-background-hover: #f8ac4c;
+  --ifm-toc-link-color: #fff;
 }
 
 .footer {
   background-color: #0b333f;
 }
 
-.theme-doc-sidebar-item-link,
-.margin-right--md,
 .menu__caret,
+.navbar-sidebar__item.menu,
+.margin-right--md,
 .navbar__items--right,
 .navbar-sidebar__back,
 .navbar__toggle {
